    * Tested against Chromium Chromium/67.0.3396.87
    * Tested against Chromium Chromium/75.0.3770.100
    * Tested against Chromium Chromium/77.0.3865.120
    * Tested against Chromium Chromium/78.0.3904.108

0.45 to be released
    * The "secure" cookie attribute now gets forced into a JSON boolean
      in ->set_cookie. Thanks to Rub3nCT for reporting this in GH issue #53.

0.44 2020-01-03
    * Fix ->get_attribute('innerHTML') and ->get_attribute('outerHTML')
      being broken in 0.42. Also add a test for that functionality. GH #48.
    * Test suite stability

0.43 2019-12-26
    * Fix number of tests skipped on test skipping
    * Fix (and add a test for) ->text() method. This addresses RT #130999,
      test provided by Chris Denley.

0.42 2019-12-23
    * ->find_link() now uses the text() attribute, not the innerHTML. This means
      that for example text_regex searches can't match HTML in link texts anymore.
    * ->xpath (and all other querying functions) now properly filter on the
      relevant subtree. This might change the results you get from the queries
      as now elements are properly filtered. Fixes GH issue #48.
    * Split longest wallclock time test into two tests, now running the
      parallel test suite in 15s per browser per backend, from 20s.
    * Silence the log output even in TRACE level. sendMessageToTarget and the
      immediate Target.receivedMessageFromTarget replies to it will not show
      up in the output anymore. If you need it, please speak up so I can make
      the list of (un)suppressed messages configurable.

0.41 2019-12-22
    * Actually respect the default backend class. This should mean we can
      actually use a backend class. This closes GH issue #45
    * Github Actions infrastructure improvements
    * On MacOS, "Google Chrome.app" is now searched only in existing directories
    * On MacOS, we also find Chromium now if Google Chrome is not installed