@@ -5,6 +5,7 @@ use WWW::Mechanize::Chrome;
 use Log::Log4perl ':easy';
 use lib '.';
 use t::helper;
+use HTTP::Cookies;
 
 Log::Log4perl->easy_init($ERROR);  # Set priority of root logger to ERROR
 
@@ -15,7 +16,7 @@ if (my $err = t::helper::default_unavailable) {
     plan skip_all => "Couldn't connect to Chrome: $@";
     exit
 } else {
-    plan tests => 8*@instances;
+    plan tests => 10*@instances;
 };
 
 sub new_mech {
@@ -54,6 +55,28 @@ t::helper::run_across_instances(\@instances, \&new_mech, 2, sub {
         my $count = 0;
         $cookies->scan(sub{$count++; });
         ok $count > 0, 'We found at least one cookie';
+
+        my $other_jar = HTTP::Cookies->new();
+        $other_jar->set_cookie(
+            42,
+            'mycookie' => 'tasty',
+            '/',
+            'example.com',
+            0,
+            '',
+            1,
+            time+600,
+            0
+        );
+        my $lived = eval {
+            $cookies->load_jar( $other_jar, replace => 1 );
+            1;
+        };
+        ok $lived, "We can load another cookie jar"
+            or diag $@;
+        $count = 0;
+        $cookies->scan(sub{$count++; });
+        is $count, 1, 'We replaced all the cookies with our single cookie from the jar';
     }
 
     undef $mech;
